--- a/index.html
+++ b/index.html
@@ -17,14 +17,22 @@
             if (error) {
                 alert('Error resetting password: ' + error.message)
             } else {
-                alert('Password reset successfully!')
+                document.getElementById('resetForm').style.display = 'none'
+                document.getElementById('successMessage').style.display = 'block'
             }
         }
     </script>
 </head>
 <body>
-    <h1>Reset Your Password</h1>
-    <input type="password" id="newPassword" placeholder="Enter new password">
-    <button onclick="resetPassword()">Reset Password</button>
+    <div id="resetForm">
+        <h1>Reset Your Password</h1>
+        <input type="password" id="newPassword" placeholder="Enter new password">
+        <button onclick="resetPassword()">Reset Password</button>
+    </div>
+    <div id="successMessage" style="display: none;">
+        <h1>Password Reset Successful</h1>
+        <p>Your password has been successfully reset. Please return to the app and sign in with your new password.</p>
+        <a href="precisionpill://passwordReset">Return to App</a>
+    </div>
 </body>
 </html>
