--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
         async function resetPassword() {
             const newPassword = document.getElementById('newPassword').value;
-            const token = getURLParameter('token'); // Get the token from the URL
+            const accessToken = getURLParameter('access_token');
 
-            if (!token) {
-                alert('No reset token found. Please request a new password reset link.');
+            if (!accessToken) {
+                alert('No access token found. Please request a new password reset link.');
                 return;
             }
 
@@ -27,7 +27,7 @@
             try {
                 const { data, error } = await supabase.auth.updateUser(
                     { password: newPassword },
-                    { accessToken: token } // Use the token here
+                    { accessToken: accessToken }
                 );
                 if (error) {
                     console.error("Error resetting password:", error);
@@ -45,7 +45,7 @@
 </head>
 <body>
     <h1>Reset Your Password</h1>
-    <form onsubmit="resetPassword(); return false;">
+    <form onsubmit="event.preventDefault(); resetPassword();">
         <input type="password" id="newPassword" placeholder="Enter new password" required>
         <button type="submit">Reset Password</button>
     </form>
