--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
     <div id="debug"></div>
 
     <script>
-        const SUPABASE_URL = https://nlkwvxqggvlmjbeympzi.supabase.co
-        const SUPABASE_ANON_KEY = eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5sa3d2eHFnZ3ZsbWpiZXltcHppIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjY4NjAwOTksImV4cCI6MjA0MjQzNjA5OX0.nbtya7nRxzHtgTnIek3dn21gnhnuXNIfTl-fF7xKUY0
+        const SUPABASE_URL = 'https://nlkwvxqggvlmjbeympzi.supabase.co'
+        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5sa3d2eHFnZ3ZsbWpiZXltcHppIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjY4NjAwOTksImV4cCI6MjA0MjQzNjA5OX0.nbtya7nRxzHtgTnIek3dn21gnhnuXNIfTl-fF7xKUY0'
         const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY)
 
+
         function debugLog(message) {
+            console.log(message);
             const debugElement = document.getElementById('debug');
             debugElement.innerHTML += `<p>${message}</p>`;
         }
@@ -39,7 +41,7 @@
             debugLog(`Access token: ${accessToken ? 'Found' : 'Not found'}`);
 
             if (!accessToken) {
-                alert('No access token found. Please request a new password reset link.');
+                debugLog('No access token found. Please request a new password reset link.');
                 return;
             }
 
@@ -52,16 +54,13 @@
                 if (error) {
                     console.error("Error resetting password:", error);
                     debugLog(`Error resetting password: ${error.message}`);
-                    alert('Error resetting password: ' + error.message);
                 } else {
                     console.log("Password reset successful", data);
                     debugLog('Password reset successful');
-                    alert('Password reset successful. Please return to the app and sign in with your new password.');
                 }
             } catch (error) {
                 console.error("Exception during password reset:", error);
                 debugLog(`Exception during password reset: ${error.message}`);
-                alert('An error occurred during password reset');
             }
         }
 
