--- a/index.html
+++ b/index.html
@@ -31,27 +31,34 @@
                 return urlParams.get(name) || new URLSearchParams(window.location.hash.slice(1)).get(name);
             }
 
-            function handleRedirect() {
-                console.log("Full URL:", window.location.href);
-                console.log("Search params:", window.location.search);
-                console.log("Hash:", window.location.hash);
+async function handleRedirect() {
+    console.log("Full URL:", window.location.href);
+    console.log("Search params:", window.location.search);
+    console.log("Hash:", window.location.hash);
 
-                const accessToken = getURLParameter('access_token');
-                const error = getURLParameter('error');
-                const errorDescription = getURLParameter('error_description');
+    const code = getURLParameter('code');
+    const error = getURLParameter('error');
+    const errorDescription = getURLParameter('error_description');
 
-                if (accessToken) {
-                    console.log("Access token found:", accessToken);
-                    localStorage.setItem('resetToken', accessToken);
-                    document.getElementById('resetForm').style.display = 'block';
-                } else if (error) {
-                    console.log("Error found:", error, "Description:", errorDescription);
-                    showError(`Error: ${error}. ${errorDescription}`);
-                } else {
-                    console.log("No access token or error found in URL");
-                    showError('No access token found. Please request a new password reset link.');
-                }
-            }
+    if (code) {
+        console.log("Code found:", code);
+        try {
+            const { data, error } = await supabaseClient.auth.exchangeCodeForSession(code);
+            if (error) throw error;
+            localStorage.setItem('resetToken', data.session.access_token);
+            document.getElementById('resetForm').style.display = 'block';
+        } catch (error) {
+            console.error("Error exchanging code for session:", error);
+            showError(`Error: ${error.message}`);
+        }
+    } else if (error) {
+        console.log("Error found:", error, "Description:", errorDescription);
+        showError(`Error: ${error}. ${errorDescription}`);
+    } else {
+        console.log("No code or error found in URL");
+        showError('No code found. Please request a new password reset link.');
+    }
+}
 
             function showError(message) {
                 document.getElementById('error').textContent = message;
